[package]
name = "rust_edition_image_processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
eframe = "0.27.2"
num-complex = "0.4.5"
rustfft = "6.2.0"
egui_plot = "0.27.2"
egui_extras = {version = "0.27.2", features = ["all_loaders"]}
rfd = "0.14.1"